# aple

./: Cargo.toml  README.md
src/: compiler.rs  engine.rs  goal.rs  lib.rs  parser.rs  sym_naming.rs  term_library.rs  test.rs  test_compiler.rs  types.rs  universe.rs
src/compiler/: test_compiler.rs
src/engine/: compiler.rs  signature.rs  test.rs  test_compiler.rs
src/parser/: lexer.rs  parser.rs  printer.rs
test/DemoData/Intoto/debian/: build.link  extract.link  fetch.link  modify.link  root.layout
test/DemoData/tuf/debian/: root.json  snapshot.json  targets.json  timestamp.json
test/Example_Output/Intoto/: Intoto.pl
test/Policy/: tuf_intoto.policy
test/Rules/: Intoto.rule  Intoto.schema  Intoto_test.rule  Tuf_test.rule  test.rule  tuf.rule  tuf.schema
test/keys/: 299adf66631cd3275d00aedb84df56688c4cfb34f642abf25912546ea1d8a86e_private.pem  299adf66631cd3275d00aedb84df56688c4cfb34f642abf25912546ea1d8a86e_public.pem  ac487edd9fad9535fa97c22c597244b1d3fd6f755b872039736ae1bad545cf86_private.pem  ac487edd9fad9535fa97c22c597244b1d3fd6f755b872039736ae1bad545cf86_public.pem  ad8f3418fb86d884318c9bba298fe48aee4819138c37a56ac3a0f923ae5792df_private.pem  ad8f3418fb86d884318c9bba298fe48aee4819138c37a56ac3a0f923ae5792df_public.pem  fca8be07d0b411ea0a9a31fdbcc2a7e46ab8371f9057e63ae4f951cb4519a06b_private.pem  fca8be07d0b411ea0a9a31fdbcc2a7e46ab8371f9057e63ae4f951cb4519a06b_public.pem  privatekey.pem  publickey.pem
