[package]
name = "aple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
    "README.md",
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
base64 = "0.21.2"
canonical_json = "0.5.0"
chrono = "0.4.26"
hex = "0.4.3"
hex-literal = "0.4.1"
indexmap = {version= "2.0.0", features = ["serde"]}
logos = "0.12.0"
minisign = "0.7.5"
pem = "3.0.1"
rand = "0.8.5"
ring = "0.16.20"
rsa = { version = "0.9.2", features = ["sha2", "pem", "std"] }
serde_json = "1.0.103"
signature = "2.1.0"
spki = "0.7.2"
